# kl3m-tokenizer-paper

./: .gitignore  Makefile  README.md  main.tex
bibliography/: references.bib
figures/: domain_term_aggregate.txt  domain_term_comparison.txt  domain_term_counts.csv  token_count.csv  token_count.txt  token_efficiency.csv  token_efficiency.txt  token_size_distribution.csv  token_size_distribution.txt
sections/: appendix.tex  background.tex  conclusion.tex  discussion.tex  evaluation.tex  introduction.tex  methodology.tex  results.tex
src/: README.md  domain_term_analysis.py  pyproject.toml  token_efficiency_analysis.py  token_size_distribution.py
src/kl3m_analysis/: __init__.py  analyzer.py  constants.py  utils.py  visualization.py
